[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentreplay"
version = "0.1.0"
description = "The flight recorder for AI agents — deterministic replay infrastructure."
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = ["httpx>=0.23"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "anthropic>=0.40", "openai>=1.40", "python-dotenv>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["agentreplay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Restrict to the SDK's own tests — ingest/ is a separate subproject with its
# own pyproject.toml/venv (different deps: FastAPI/SQLAlchemy/etc.).
testpaths = ["tests"]
