[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentreplay-ingest"
version = "0.1.0"
description = "AgentReplay ingest API — FastAPI + Postgres (JSONB), receives recorded spans from the SDK."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "celery>=5.3",
    "redis>=5.0",
    "anthropic>=0.40",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "httpx>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
